--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/styles.css">
-  <title>Todo App</title>
-</head>
-<body>
-  <!-- Your HTML content goes here -->
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="assets/styles.css" />
+		<title>Todo App</title>
+	</head>
+	<body>
+		<!-- Your HTML content goes here -->
+		<main id="main-content"></main>
+	</body>
 </html>
